# m6lexerkit

./: .gitignore  Cargo.toml
examples/bash/: Cargo.toml  bash.rs
examples/bash/examples/: tetris.sh
examples/bash/resources/: exp0.sh  pipes.sh
examples/bash/src/: main.rs
examples/bashlike/: Cargo.toml  bashlike.rs
examples/bashlike/examples/: exp0
examples/bashlike/resources/: exp0.bath
examples/bashlike/src/: main.rs
examples/es6/: Cargo.toml
examples/es6/examples/: exp0.js
examples/es6/resources/: app.js
examples/es6/src/: lib.rs  main.rs  tokenizer1.rs  tokenizer2.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: lib.rs
