[package]
name = "m6tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
fancy-regex = "0.8.0"
lazy_static = "1.4.0"
string-interner = "0.14.0"
maplit = "^1.0.2"


[dependencies.proc_macros]
package = "proc-macros"
path = "proc_macros"

[workspace]
members = [
    "proc_macros",
]
