[package]
name = "m6lexerkit"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
fancy-regex = "0.8.0"
lazy_static = "1.5.0"
string-interner = "0.19.0"
maplit = "^1.0.2"
concat-idents = "1.1.3"

# m6ptr = { git = "https://github.com/minghu6/rust-m6coll.git", tag = "v0.3.0"}
m6ptr = { path = "../m6coll/m6ptr"}


[dependencies.proc_macros]
package = "m6lexerkit-proc-macros"
path = "proc_macros"

[workspace]
members = [
    "proc_macros",
]

[[example]]
name = "bash"
path = "examples/bash/bash.rs"


[[example]]
name = "bashlike"
path = "examples/bashlike/bashlike.rs"
